fix setting melipayamak

--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,15 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# SMS configuration
+SMS_ENABLED=true
+SMS_PROVIDER=melli
+SMS_SENDER=
+
+# MelliPayamak credentials
+SMS_MELLI_USERNAME=
+SMS_MELLI_PASSWORD=
+SMS_MELLI_WSDL=http://api.payamak-panel.com/post/Send.asmx?wsdl
+SMS_MELLI_FROM=
+SMS_TEMPLATE_VERIFY_CODE=
